[a11y] Fix contrast issues

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -15,7 +15,7 @@ body {
 
 /* tailwind does not handle placeholder styles */
 input::placeholder {
-  @apply text-gray-600;
+  @apply text-gray-700;
 }
 
 .col-gap-0 {
